# ICAAD

./: README.md  fly.toml  inference.json  main.py  requirements.txt  web_scraper.json  web_scraper.py
icaad/: .gitignore  @Shubham Kumar Jain @Sai Swaroop.yaml  Dockerfile  Features.csv  fly.toml  main.py  pyproject.toml  sample.json  web_scraper.json
icaad/downloads/: countries.csv  countries.json  countries_urls.json  countries_years_urls.json
