[tool.poetry]
name = "icaad"
version = "0.1.0"
description = ""
authors = ["objectbb <objectbb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
boto3 = "^1.35.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
