[tool.poetry]
name = "icaad"
version = "0.1.0"
description = ""
authors = ["objectbb <objectbb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
boto3 = "^1.35.84"
pandas = "^2.2.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
pdfplumber = "^0.11.4"
asyncio = "^3.4.3"
pdfkit-async = "^0.7.2"
uvicorn = "^0.34.0"
openai = "^1.58.1"
aiohttp = "^3.11.11"
sse-starlette = "^2.2.1"
python-dotenv = "^1.0.1"
pdfkit = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
